[package]
name = "lproxy-cv"
version = "0.1.7"
authors = ["linguohua <lghchinaidea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[patch.crates-io]
native-tls = { git = "https://github.com/linguohua/rust-native-tls" }

[dependencies]
#futures_01 = { package = "futures", version = "0.1"}
futures_03 = { package = "futures", version = "0.3"}
failure = "0.1.6"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["codec", "udp"] }
tokio-tls = { package = "tokio-native-tls", version = "0.1" }
stream-cancel = "0.5"

bytes = "0.5"

url = "2.1.0"

byte = "0.2.4"
nix = "0.15.0"
libc = "0.2.65"
openssl = "0.10.25"
native-tls = "0.2.4"
log = "0.4.8"
flate2 = "1.0.12"
serde_json = "1.0.41"
serde = "1.0.101"
num_cpus = "1.10.1"
fnv = "1.0.6"
byteorder = "1.3.2"
fs2 = "0.4.3"
rand = "0.7.2"
base64 = "0.10.1"
#iptables = "0.2.2"
mac_address = "1.0.3"
protobuf = "2.14.0"

[dependencies.signal-hook]
version = "0.1.10"
features = ["mio-support", "tokio-support"]
