[package]
name = "lproxy-cv"
version = "0.1.10"
authors = ["linguohua <lghchinaidea@gmail.com>"]
edition = "2018"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true

[patch.crates-io]
native-tls = { git = "https://github.com/linguohua/rust-native-tls" }

[dependencies]
#futures_01 = { package = "futures", version = "0.1"}
futures_03 = { package = "futures", version = "0.3"}
failure = "0.1.8"
tokio = { version = "0.2.21", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec", "udp"] }
tokio-tls = { package = "tokio-native-tls", version = "0.1" }
stream-cancel = "0.5.2"
mio = "0.6"
os_socketaddr = "0.1"

bytes = "0.5.4"
url = "2.1.1"
byte = "0.2.4"
nix = "0.20.2"
libc = "0.2.70"
openssl = "0.10.29"
native-tls = "0.2.4"
log = "0.4.8"
flate2 = "1.0.14"
serde_json = "1.0.53"
serde = "1.0.110"
num_cpus = "1.13.0"
fnv = "1.0.7"
byteorder = "1.3.4"
fs2 = "0.4.3"
rand = "0.7.3"
base64 = "0.12.1"
#iptables = "0.2.2"
mac_address = "1.0.3"
protobuf = "2.14.0"

[build-dependencies]
cc = "1.0"
